refactor: remove redundant playbooks directory, use single antora-playbook.yml

--- a/ROOT/modules/ROOT/pages/index.adoc
+++ b/ROOT/modules/ROOT/pages/index.adoc
@@ -9,6 +9,6 @@ Bienvenido a la documentación completa de UnoSportClub.
 * xref:admin::index.adoc[Manual del Administrador]
 * xref:sudo::index.adoc[Manual del Super Usuario]
 * xref:developer::index.adoc[Manual del Desarrollador]
-* xref:implementation::index.adoc[Manual de Implementación]
+* xref:integration::index.adoc[Manual de Integración]
 
 
