--- a/implementation/modules/ROOT/pages/index.adoc
+++ b/implementation/modules/ROOT/pages/index.adoc
@@ -1,70 +1,10 @@
-= Manual de Implementación
 
-Este es el manual de implementación para UnoSportClub.
+= Manual de Integración (migrado)
 
-== Introducción
+Este contenido fue migrado al nuevo directorio `integration/modules/ROOT/pages/index.adoc`.
 
-Bienvenido al manual de implementación. Este documento guía el proceso de instalación y configuración inicial del sistema.
+Por compatibilidad, el antiguo árbol `implementation/` se mantiene como referencia, pero el contenido principal ahora vive en `integration/`.
 
-== Requisitos del Sistema
+== Nota
 
-=== Requisitos de Hardware
-
-Los requisitos mínimos de hardware son:
-
-* Procesador: 2+ núcleos
-* RAM: 4GB mínimo, 8GB recomendado
-* Almacenamiento: 50GB mínimo
-
-=== Requisitos de Software
-
-El sistema requiere:
-
-* Node.js 18+
-* npm 9+
-* Firebase CLI
-* Base de datos configurada
-
-== Instalación
-
-=== Instalación Base
-
-Pasos para la instalación base:
-
-. Clonar el repositorio
-. Instalar dependencias
-. Configurar variables de entorno
-. Ejecutar migraciones
-
-=== Configuración Inicial
-
-La configuración inicial incluye:
-
-. Configuración de Firebase
-. Configuración de base de datos
-. Configuración de autenticación
-. Configuración de permisos
-
-== Despliegue
-
-=== Despliegue en Desarrollo
-
-Instrucciones para el despliegue en ambiente de desarrollo.
-
-=== Despliegue en Producción
-
-Guía completa para el despliegue en producción.
-
-== Configuración Post-Instalación
-
-=== Crear Usuario Administrador
-
-El primer usuario administrador debe ser creado después de la instalación.
-
-=== Configurar Canchas Iniciales
-
-Las canchas deben ser configuradas antes de comenzar a operar.
-
-=== Configurar Tarifas
-
-Las tarifas iniciales deben ser configuradas.
+Favor referirse al nuevo directorio `integration/` para el contenido actualizado.
