--- a/developer/modules/ROOT/nav.adoc
+++ b/developer/modules/ROOT/nav.adoc
@@ -1,1 +1,10 @@
 * xref:index.adoc[Inicio]
+* xref:development-environment.adoc[Preparación del Entorno]
+* xref:engineering.adoc[Ingeniería de Software]
+* xref:architecture.adoc[Arquitectura del Software]
+* xref:data-model.adoc[Modelo de Datos]
+* xref:api-reference.adoc[Referencia de API]
+* xref:workflows.adoc[Flujos de Trabajo]
+* xref:development-process.adoc[Proceso de Desarrollo]
+* xref:methodology.adoc[Metodología de Desarrollo Ágil]
+* xref:tech-stack.adoc[Stack Tecnológico]
